force-app/main/default/objects/Product_Features__c/Product_Features__c.object-meta.xml
<CustomObject>
    <description>Junction object which manages the many to many relationship between Product object and the Features object. Maintained via integration. 
Object Type: IA 
Integrated: Y</description>
    <label>Product Features</label>
    <nameField>
        <displayFormat>PF-{0000}</displayFormat>
        <label>Product Feature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>