force-app/main/default/objects/Product_Features__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>Lookup field (master-detail) to the Feature object.  Used to associate a Product to a Feature.  Maintained by integration.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Lookup field to the Feature object.  Used to associate a Product to a Feature.  Maintained by integration</inlineHelpText>
    <label>Feature</label>
    <referenceTo>Features__c</referenceTo>
    <relationshipLabel>Product Features</relationshipLabel>
    <relationshipName>Product_Features</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>