force-app/main/default/objects/Product_Features__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>Formula field to display the feature name from the Features object. 
Field Type: IA
Integrated: N/A</description>
    <formula>Feature__r.Feature_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to display the feature name from the Features object.</inlineHelpText>
    <label>Feature Name</label>
    <type>Text</type>
</CustomField>