force-app/main/default/objects/Product_Features__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to the Product object.  Used to associate a Product to a Feature.  Maintained by integration.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Lookup field to the Product object.  Used to associate a Product to a Feature.  Maintained by integration.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Features</relationshipLabel>
    <relationshipName>Product_Features</relationshipName>
    <type>Lookup</type>
</CustomField>