force-app/main/default/objects/Product_Features__c/listViews/All_Adam.listView-meta.xml
<ListView>
    <fullName>All_Adam</fullName>
    <columns>NAME</columns>
    <columns>Feature__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Feature__c</field>
        <operation>equals</operation>
        <value>6378</value>
    </filters>
    <label>All - Adam</label>
</ListView>